package src.Model;

public class Biographie {

}
