package src.Model;

public class Episode {

}
